Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2004-09-05  Erik Grinaker <erikg@codepoet.no>

	* renamed data/images to data/icons

2004-09-04  Erik Grinaker <erikg@codepoet.no>

	* port application ui to gtk.UIManager

	* the user may attempt to continue running Revelation when
	an unhandled exception occurs

	* the searchbar follows the detachable toolbar setting in gnome

2004-08-31  Erik Grinaker <erikg@codepoet.no>

	* try libs in pythonpath from configure first

2004-08-30  Erik Grinaker <erikg@codepoet.no>

	* use new file dialog from GTK+ 2.4

	* reorganized source file tree

	* use GNU autotools instead of python distutils for
	installation

	* bumped version number to 0.4.0


---------------[ 2004-08-30 : 0.3.3 ]---------------

2004-08-30  Erik Grinaker <erikg@codepoet.no>

	* bumped version number to 0.3.3

2004-08-29  Erik Grinaker <erikg@codepoet.no>

	* renamed the XML (eXtensible Markup Language) filetype to XML

2004-08-28  Erik Grinaker <erikg@codepoet.no>

	* improved the xhtml exporter

2004-08-27  Erik Grinaker <erikg@codepoet.no>

	* added an xhtml/css exporter

	* fixed a couple of bugs from the change to entry subclasses

2004-08-26  Erik Grinaker <erikg@codepoet.no>

	* created entry subclasses for various types instead of
	using the entry dict

	* created field subclasses for various types instead of
	using the field dict

2004-08-24  Erik Grinaker <erikg@codepoet.no>

	* changed some launcher substitution variables

	* added optional variables and optional substring expansions
	to the launcher expansion syntax

	* changed the default launchers

	* added tooltips to launcher preferences

2004-08-23  Erik Grinaker <erikg@codepoet.no>

	* changed the accelerators for adding, editing and removing
	entries to Control-Insert, Control-Return and Control-Delete

	* added key handler to the tree view to allow Insert, Return
	and Delete to be used when navigating the tree
