@@ -1,0 +1,3 @@
+appicondir	= $(datadir)/icons/hicolor/16x16/apps
+appicon_DATA	= revelation.png
+
