@@ -1,0 +1,3 @@
+appicondir	= $(datadir)/icons/hicolor/48x48/apps
+appicon_DATA	= revelation.png
+
