@@ -35,8 +35,8 @@ AUTHOR		= "Erik Grinaker <erikg@codepoet.no>"
 COPYRIGHT	= "Copyright \302\251 2003-2004 Erik Grinaker"
 
 DIR_GCONFSCHEMAS= "@schemadir@"
-DIR_IMAGES	= "@datadir@/icons"
-DIR_UI		= "@datadir@/ui"
+DIR_ICONS	= "@datadir@/icons"
+DIR_UI		= "@pkgdatadir@/ui"
 
 FILE_GCONFTOOL	= "@GCONFTOOL@"
 
